--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">News App</string>
     <string name="term_and_condition"><u>term and condition</u></string>
+    <string name="login">Login</string>
+    <string name="sign_up">Sign Up</string>
 </resources>
